--- a/www/app.html
+++ b/www/app.html
@@ -65,6 +65,9 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/selectize-0.12.4/css/selectize.bootstrap3.css" rel="stylesheet">
 <script src="site_libs/selectize-0.12.4/js/selectize.min.js"></script>
 <script src="site_libs/selectize-0.12.4/accessibility/js/selectize-plugin-a11y.min.js"></script>
+<script src="site_libs/ionrangeslider-javascript-2.3.1/js/ion.rangeSlider.min.js"></script>
+<script src="site_libs/strftime-0.9.2/strftime-min.js"></script>
+<link href="site_libs/ionrangeslider-css-2.3.1/css/ion.rangeSlider.css" rel="stylesheet">
 
 
 <link rel="stylesheet" href="styles.css">
@@ -177,6 +180,9 @@ ul.task-list li input[type="checkbox"] {
 .control-label {
   font-weight: bold;
 }
+.irs-with-grid {
+  margin: 0 20px;
+}
 </style>
 </div>
 <div class="column-screen-inset">
@@ -188,44 +194,35 @@ ul.task-list li input[type="checkbox"] {
 <i class="callout-icon no-icon"></i>
 </div>
 <div class="callout-title-container flex-fill">
-Plot controls
+Plot filters
 </div>
 </div>
 <div class="callout-body-container callout-body">
 <div class="cell">
 <div class="cell-output-display no-overflow-x">
 <div class="form-group shiny-input-container" style="width:100%;">
-<label class="control-label" id="overall_region-label" for="overall_region">Regions</label>
+<label class="control-label" id="region-label" for="region">Regions</label>
 <div>
-<select class="shiny-input-select form-control" id="overall_region" multiple="multiple"></select>
-<script type="application/json" data-for="overall_region">{"plugins":["selectize-plugin-a11y"]}</script>
+<select class="shiny-input-select form-control" id="region" multiple="multiple"></select>
+<script type="application/json" data-for="region">{"plugins":["selectize-plugin-a11y"]}</script>
 </div>
 </div>
 </div>
 <div class="cell-output-display no-overflow-x">
 <div class="form-group shiny-input-container" style="width:100%;">
-<label class="control-label" id="overall_country-label" for="overall_country">Countries</label>
+<label class="control-label" id="country-label" for="country">Countries</label>
 <div>
-<select class="shiny-input-select form-control" id="overall_country" multiple="multiple"></select>
-<script type="application/json" data-for="overall_country">{"plugins":["selectize-plugin-a11y"]}</script>
+<select class="shiny-input-select form-control" id="country" multiple="multiple"></select>
+<script type="application/json" data-for="country">{"plugins":["selectize-plugin-a11y"]}</script>
 </div>
 </div>
 </div>
 <div class="cell-output-display no-overflow-x">
 <div class="form-group shiny-input-container" style="width:100%;">
-<label class="control-label" id="overall_indicator-label" for="overall_indicator">Indicator</label>
+<label class="control-label" id="type-label" for="type">Type</label>
 <div>
-<select class="shiny-input-select form-control" id="overall_indicator"></select>
-<script type="application/json" data-for="overall_indicator">{"plugins":["selectize-plugin-a11y"]}</script>
-</div>
-</div>
-</div>
-<div class="cell-output-display no-overflow-x">
-<div class="form-group shiny-input-container" style="width:100%;">
-<label class="control-label" id="overall_type-label" for="overall_type">Type</label>
-<div>
-<select class="shiny-input-select form-control" id="overall_type" multiple="multiple"></select>
-<script type="application/json" data-for="overall_type">{"plugins":["selectize-plugin-a11y"]}</script>
+<select class="shiny-input-select form-control" id="type" multiple="multiple"></select>
+<script type="application/json" data-for="type">{"plugins":["selectize-plugin-a11y"]}</script>
 </div>
 </div>
 </div>
@@ -252,16 +249,48 @@ More information
 <div class="tab-content">
 <div id="tabset-1-1" class="tab-pane active" role="tabpanel" aria-labelledby="tabset-1-1-tab">
 <div class="cell">
+<div class="cell-output-display no-overflow-x">
+<div class="form-group shiny-input-container" style="width:100%;">
+<label class="control-label" id="indicator-label" for="indicator">Populism indicator</label>
+<div>
+<select class="shiny-input-select form-control" id="indicator"></select>
+<script type="application/json" data-for="indicator">{"plugins":["selectize-plugin-a11y"]}</script>
+</div>
+</div>
+</div>
 <div class="cell-output-display">
 <div class="shiny-plot-output html-fill-item" id="plot_overall" style="width:100%;height:100%;"></div>
 </div>
 </div>
 </div>
 <div id="tabset-1-2" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-2-tab">
-
+<div class="cell">
+<div class="cell-output-display no-overflow-x">
+<div class="form-group shiny-input-container" style="width:100%;">
+<label class="control-label" id="compare-label" for="compare">Compare</label>
+<div>
+<select class="shiny-input-select form-control" id="compare"></select>
+<script type="application/json" data-for="compare">{"plugins":["selectize-plugin-a11y"]}</script>
+</div>
+</div>
+</div>
+<div class="cell-output-display">
+<div class="shiny-plot-output html-fill-item" id="plot_compare" style="width:100%;height:100%;"></div>
+</div>
+</div>
 </div>
 <div id="tabset-1-3" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-3-tab">
-
+<div class="cell">
+<div class="cell-output-display">
+<div class="form-group shiny-input-container" style="width:100%;">
+<label class="control-label" id="period-label" for="period">Time period</label>
+<input class="js-range-slider" id="period" data-skin="shiny" data-type="double" data-min="315532800000" data-max="1609372800000" data-from="315532800000" data-to="1609372800000" data-step="86400000" data-grid="true" data-grid-num="9.99666221628839" data-grid-snap="false" data-prettify-separator="," data-prettify-enabled="true" data-keyboard="true" data-drag-interval="true" data-data-type="date" data-time-format="%b %Y%">
+</div>
+</div>
+<div class="cell-output-display">
+<div class="shiny-plot-output html-fill-item" id="plot_map" style="width:100%;height:100%;"></div>
+</div>
+</div>
 </div>
 </div>
 </div>
